Disaster Declaration 9/4 afternoon
Added column "Entity" and populated; did a little analysis to see how complex my check for preexisting FEMA Dec strings needs to be.

--- a/Disaster_Declarations_Dashboard.ipynb
+++ b/Disaster_Declarations_Dashboard.ipynb
@@ -23,6 +23,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "54a73233",
+   "metadata": {},
+   "source": [
+    "### Connecting to ArcGIS API"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "4041c933",
@@ -54,7 +62,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<FeatureLayer url:\"https://services9.arcgis.com/GDVaV4SDJDDBT8gi/arcgis/rest/services/Disaster_Declarations_Summaries_v2/FeatureServer/0\">\n",
       "<FeatureLayer url:\"https://services9.arcgis.com/GDVaV4SDJDDBT8gi/arcgis/rest/services/Disaster_Declarations_Summaries_v2/FeatureServer/1\">\n"
      ]
     }
@@ -69,12 +76,13 @@
     "dd_item = gis.content.get(dd_id)\n",
     "\n",
     "# Item ID 0 is the output layer displayed in the dashboard\n",
-    "dashboard_layer = dd_item.layers[0]\n",
+    "# COMMENTING OUT WHILE TESTING\n",
+    "#dashboard_layer = dd_item.layers[0]\n",
+    "\n",
+    "#print(dashboard_layer)\n",
     "\n",
     "# Item ID 1 is the input layer used for getting geometries\n",
     "geometries_layer = dd_item.layers[1]\n",
-    "\n",
-    "print(dashboard_layer)\n",
     "\n",
     "print(geometries_layer)"
    ]
@@ -82,6 +90,32 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "707c59ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<FeatureLayer url:\"https://services9.arcgis.com/GDVaV4SDJDDBT8gi/arcgis/rest/services/DisasterDeclarations_forTesting_2025only/FeatureServer/0\">\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ID of the item including Disaster Declarations Summaries subset FOR TESTING ONLY,\n",
+    "# replaces \"dashboard_layer\" above through duration of testing\n",
+    "test_id = \"edb716da51bc4f7882d13d425ad08fd2\"\n",
+    "\n",
+    "test_item = gis.content.get(test_id)\n",
+    "\n",
+    "dashboard_layer = test_item.layers[0]\n",
+    "\n",
+    "print(dashboard_layer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "b3f638e0",
    "metadata": {},
    "outputs": [],
@@ -104,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d21ea439",
    "metadata": {},
    "outputs": [],
@@ -131,12 +165,15 @@
    "id": "e5d93b45",
    "metadata": {},
    "source": [
-    "### EVERYTHING BELOW HERE IS FOR THE API..."
+    "### Connect to OpenFEMA API and get Disaster Declarations Summaries\n",
+    "* Right right right; I forgot that the API by default only returns 1000 records. I shouldn't really NEED more records than that, since the script is going to be run once per day. One thousand records should be MORE than enough. But, I now realize I need to do a little footwork to make sure I am just getting the 1000 _most recent_ records...\n",
+    "\n",
+    "* Okay added a sort order to the api call to only get the most recent records by declarationDate! That should do it..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b9d0bef7",
    "metadata": {},
    "outputs": [],
@@ -154,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "8b6c6e87",
    "metadata": {},
    "outputs": [
@@ -164,7 +201,7 @@
        "dict"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,17 +215,6 @@
     "\n",
     "# Inspect what I got\n",
     "type(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1c927ef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for k, v in data.items():\n",
-    "    print(f\"{k}, {v}\")"
    ]
   },
   {
@@ -333,16 +359,16 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
-       "      <td>99031</td>\n",
-       "      <td>Jefferson (County)</td>\n",
+       "      <td>99017</td>\n",
+       "      <td>Deschutes (County)</td>\n",
        "      <td>25117</td>\n",
        "      <td>None</td>\n",
        "      <td>2025082301</td>\n",
        "      <td>10</td>\n",
        "      <td>R</td>\n",
        "      <td>2025-08-25T18:21:58.453Z</td>\n",
-       "      <td>8b07b29243bdbba511790332bd3fa9cca0fe33fd</td>\n",
-       "      <td>f0604c05-113b-449e-8e4a-f3b5076af546</td>\n",
+       "      <td>c4a190d030807595da90813aabc6ad2175917668</td>\n",
+       "      <td>df7cb24f-8e5a-4c1e-923e-4c75c9ec4581</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -357,16 +383,16 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
-       "      <td>99017</td>\n",
-       "      <td>Deschutes (County)</td>\n",
+       "      <td>99031</td>\n",
+       "      <td>Jefferson (County)</td>\n",
        "      <td>25117</td>\n",
        "      <td>None</td>\n",
        "      <td>2025082301</td>\n",
        "      <td>10</td>\n",
        "      <td>R</td>\n",
        "      <td>2025-08-25T18:21:58.453Z</td>\n",
-       "      <td>c4a190d030807595da90813aabc6ad2175917668</td>\n",
-       "      <td>df7cb24f-8e5a-4c1e-923e-4c75c9ec4581</td>\n",
+       "      <td>8b07b29243bdbba511790332bd3fa9cca0fe33fd</td>\n",
+       "      <td>f0604c05-113b-449e-8e4a-f3b5076af546</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -415,8 +441,8 @@
        "   ihProgramDeclared  iaProgramDeclared  ...  placeCode      designatedArea  \\\n",
        "0              False              False  ...      99009  Calaveras (County)   \n",
        "1              False              False  ...      99077     Powell (County)   \n",
-       "2              False              False  ...      99031  Jefferson (County)   \n",
-       "3              False              False  ...      99017  Deschutes (County)   \n",
+       "2              False              False  ...      99017  Deschutes (County)   \n",
+       "3              False              False  ...      99031  Jefferson (County)   \n",
        "4              False              False  ...      99003   Honolulu (County)   \n",
        "\n",
        "  declarationRequestNumber lastIAFilingDate  incidentId  region  \\\n",
@@ -436,15 +462,15 @@
        "                                       hash  \\\n",
        "0  d017531813b75fc753371c26b246931d48de651e   \n",
        "1  29e175a73b969da6864182e703e3cb3f8d0bb32d   \n",
-       "2  8b07b29243bdbba511790332bd3fa9cca0fe33fd   \n",
-       "3  c4a190d030807595da90813aabc6ad2175917668   \n",
+       "2  c4a190d030807595da90813aabc6ad2175917668   \n",
+       "3  8b07b29243bdbba511790332bd3fa9cca0fe33fd   \n",
        "4  731df26a647e5a0338177f445bab7a23b6f8d6ed   \n",
        "\n",
        "                                     id  \n",
        "0  28a1ba9f-d914-4024-9e75-4a66b5bba092  \n",
        "1  41329e57-2046-4196-a63d-902f3e7c923c  \n",
-       "2  f0604c05-113b-449e-8e4a-f3b5076af546  \n",
-       "3  df7cb24f-8e5a-4c1e-923e-4c75c9ec4581  \n",
+       "2  df7cb24f-8e5a-4c1e-923e-4c75c9ec4581  \n",
+       "3  f0604c05-113b-449e-8e4a-f3b5076af546  \n",
        "4  ffab7fa0-2e69-428d-b4d3-da95ca352c03  \n",
        "\n",
        "[5 rows x 28 columns]"
@@ -560,14 +586,14 @@
      "text": [
       "0    06009\n",
       "1    30077\n",
-      "2    41031\n",
-      "3    41017\n",
+      "2    41017\n",
+      "3    41031\n",
       "4    15003\n",
       "Name: fipsFullCode, dtype: object\n",
       "0    0699009\n",
       "1    3099077\n",
-      "2    4199031\n",
-      "3    4199017\n",
+      "2    4199017\n",
+      "3    4199031\n",
       "4    1599003\n",
       "Name: fipsTribalCode, dtype: object\n"
      ]
@@ -579,7 +605,6 @@
     "summaries_df[\"fipsTribalCode\"] = summaries_df[\"fipsStateCode\"] + summaries_df[\"placeCode\"]\n",
     "\n",
     "print(summaries_df[\"fipsFullCode\"].head())\n",
-    "\n",
     "print(summaries_df[\"fipsTribalCode\"].head())"
    ]
   },
@@ -593,101 +618,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "6f76cf65",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Good lord I can't remember how to calculate any of these fields with pandas... 🤣😭\n",
-    "# Anyway the first one I need to calc is the COVID field, simple yes/no\n",
+    "# Anyway the first one I need to calc is the COVID column, simple yes/no\n",
     "\n",
-    "summaries_df[\"COVID-19\"] = np.where(summaries_df[\"declarationTitle\"].str.contains(\"COVID-19\"), \"Show only COVID-19\", \"Show only non-COVID-19\")\n"
+    "summaries_df[\"COVID19\"] = np.where(summaries_df[\"declarationTitle\"].str.contains(\"COVID-19\"), \"Show only COVID-19\", \"Show only non-COVID-19\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "ba321596",
+   "execution_count": null,
+   "id": "8262e79c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>declarationTitle</th>\n",
-       "      <th>COVID-19</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [declarationTitle, COVID-19]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Okay why am I only getting threeeeeee COVID records with this...\n",
-    "all_the_bugs = summaries_df[summaries_df[\"COVID-19\"] == \"Show only COVID-19\"][[\"declarationTitle\", \"COVID-19\"]]\n",
+    "# For my next trick I'll use np.select instead of np.where since to code new Entity column\n",
+    "# I have three possible values not just 2 / yes no / on off\n",
     "\n",
-    "all_the_bugs"
+    "entity_conditions = [\n",
+    "    summaries_df[\"designatedArea\"] == \"Statewide\",\n",
+    "    (summaries_df[\"designatedArea\"] != \"Statewide\") & (summaries_df[\"fipsCountyCode\"] == \"000\"),\n",
+    "    (summaries_df[\"designatedArea\"] != \"Statewide\") & (summaries_df[\"fipsCountyCode\"] != \"000\")\n",
+    "]\n",
+    "\n",
+    "entity_values = [\"State or Equivalent\", \"Tribal Area or Equivalent\", \"County or Equivalent\"]\n",
+    "\n",
+    "summaries_df[\"Entity\"] = np.select(entity_conditions, entity_values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "320fdb29",
+   "execution_count": null,
+   "id": "513e5797",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1000, 31)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# How many records do I have...\n",
-    "summaries_df.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "41b68776",
-   "metadata": {},
-   "source": [
-    "* Right right right; I forgot that the API by default only returns 1000 records. I shouldn't really NEED more records than that, since the script is going to be run once per day. One thousand records should be MORE than enough. But, I now realize I need to do a little footwork to make sure I am just getting the 1000 _most recent_ records...\n",
+    "# OK I need a sanity check on my df building so far\n",
     "\n",
-    "Okay added a sort order to the api call to only get the most recent records by declarationDate! That should do it..."
+    "summaries_df.to_excel(\"C:\\Users\\Misti\\OneDrive\\PROJECTS\\2025_08_Disaster_Declarations_Dissolve\\sanity_check.xlsx\")"
    ]
   },
   {
@@ -714,6 +686,52 @@
    ],
    "source": [
     "summaries_df[\"declarationDate\"].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e188aa1",
+   "metadata": {},
+   "source": [
+    "Nice! Okay! So far, we've added the full FIPS code (5 digit) and the full tribal code (7-digit). I've also added the COVID field (basically yes or no) and the Entity field (State, County or Tribal). I mean that's good progress for feeling crappy the last few days (not like, sick crappy, just Michigan-is-so-f*cking-lame crappy).\n",
+    "\n",
+    "Now, what needs to be done next?\n",
+    "\n",
+    "* I first need to compare the values that are already in the dissolved Summaries layer (the dashboard layer) with what's in my dataframe.\n",
+    "* Before I do that, I need to figure out exactly what field we're going to compare on. My first impulse is to use the FEMA Declaration String, but as we discussed above, not sure if that's going to work well. For example...if FEMA pushes out twenty counties with one FEMA Dec String one day, then they decide to push out another ten counties with the same Dec String the next day, if I do the comparison the way I intend, I'll fine that Dec String in my dashboard already and ignore it. I won't get those ten new counties.\n",
+    "* I guess I really need to root around in the data to see if my impulse is a valid way to compare the data...\n",
+    "\n",
+    "Okay so I'll do that in a minute here. What needs to happen then?\n",
+    "* I'll need to do the actual comparison, whatever that looks like. Hopefully it's just looking for FEMA Dec Strings in the Dashboard and it's as simple as that.\n",
+    "* I'd probably just keep a running tally of the Dec Strings that are already in the dashboard and then just drop those records from my df (technically make a new df where I've dropped those records)\n",
+    "* Once I've isolated the new Dec Strings, I can't dissolve them yet; I need to get the geometries of the associated areas.\n",
+    "* I get all the geometries associated with a given Dec String, do the dissolve thingy (the actual dissolve gp tool thingy), then...well that's as far as my brain needs to go right now.\n",
+    "\n",
+    "First let's analyze the temporal spans of all observations with some help with your friend and mine ChatGPT..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "ba40e248",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summaries_df[\"declarationDate\"] = pd.to_datetime(summaries_df[\"declarationDate\"])\n",
+    "\n",
+    "analyze = summaries_df.groupby(\"femaDeclarationString\")[\"declarationDate\"].agg([\"min\", \"max\"])\n",
+    "\n",
+    "analyze[\"range\"] = (analyze[\"max\"] - analyze[\"min\"]).dt.total_seconds() / 3600\n",
+    "\n",
+    "analyze.to_csv(r\"C:\\Users\\Misti\\OneDrive\\PROJECTS\\2025_08_Disaster_Declarations_Dissolve\\sanity_check_timedelta.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b838fb85",
+   "metadata": {},
+   "source": [
+    "Well that's encouraging (no really I'm not even being sarcastic). I get a whole column of big fat zeros for the declaredDate ranges of all the fema Dec Strings. Honestly...that means I should be fine just proceeding with my simple it's-there-or-not check. I should probably also commit."
    ]
   }
  ],
