DisDecDash COB, get unique fema API rows to add
Got as far as checking the fema API Dec strings against the ones in the dashboard, then creating a subset df with only the Dec strings to add.

--- a/Disaster_Declarations_Dashboard.ipynb
+++ b/Disaster_Declarations_Dashboard.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7dc57611",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "707c59ff",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b3f638e0",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d21ea439",
    "metadata": {},
    "outputs": [],
@@ -195,10 +195,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b9d0bef7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>femaDeclarationString</th>\n",
+       "      <th>disasterNumber</th>\n",
+       "      <th>state</th>\n",
+       "      <th>declarationType</th>\n",
+       "      <th>declarationDate</th>\n",
+       "      <th>fyDeclared</th>\n",
+       "      <th>incidentType</th>\n",
+       "      <th>declarationTitle</th>\n",
+       "      <th>ihProgramDeclared</th>\n",
+       "      <th>iaProgramDeclared</th>\n",
+       "      <th>...</th>\n",
+       "      <th>placeCode</th>\n",
+       "      <th>designatedArea</th>\n",
+       "      <th>declarationRequestNumber</th>\n",
+       "      <th>lastIAFilingDate</th>\n",
+       "      <th>incidentId</th>\n",
+       "      <th>region</th>\n",
+       "      <th>designatedIncidentTypes</th>\n",
+       "      <th>lastRefresh</th>\n",
+       "      <th>hash</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>FM-5612-CA</td>\n",
+       "      <td>5612</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>FM</td>\n",
+       "      <td>2025-09-03T00:00:00.000Z</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>2-7 FIRE</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>99009</td>\n",
+       "      <td>Calaveras (County)</td>\n",
+       "      <td>25121</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025090301</td>\n",
+       "      <td>9</td>\n",
+       "      <td>R</td>\n",
+       "      <td>2025-09-03T18:41:07.857Z</td>\n",
+       "      <td>d017531813b75fc753371c26b246931d48de651e</td>\n",
+       "      <td>28a1ba9f-d914-4024-9e75-4a66b5bba092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>FM-5611-MT</td>\n",
+       "      <td>5611</td>\n",
+       "      <td>MT</td>\n",
+       "      <td>FM</td>\n",
+       "      <td>2025-08-26T00:00:00.000Z</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>WINDY ROCK FIRE</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>99077</td>\n",
+       "      <td>Powell (County)</td>\n",
+       "      <td>25119</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025082701</td>\n",
+       "      <td>8</td>\n",
+       "      <td>R</td>\n",
+       "      <td>2025-08-28T18:01:23.160Z</td>\n",
+       "      <td>29e175a73b969da6864182e703e3cb3f8d0bb32d</td>\n",
+       "      <td>41329e57-2046-4196-a63d-902f3e7c923c</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>FM-5610-OR</td>\n",
+       "      <td>5610</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>FM</td>\n",
+       "      <td>2025-08-23T00:00:00.000Z</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>FLAT FIRE</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>99017</td>\n",
+       "      <td>Deschutes (County)</td>\n",
+       "      <td>25117</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025082301</td>\n",
+       "      <td>10</td>\n",
+       "      <td>R</td>\n",
+       "      <td>2025-08-25T18:21:58.453Z</td>\n",
+       "      <td>c4a190d030807595da90813aabc6ad2175917668</td>\n",
+       "      <td>df7cb24f-8e5a-4c1e-923e-4c75c9ec4581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FM-5610-OR</td>\n",
+       "      <td>5610</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>FM</td>\n",
+       "      <td>2025-08-23T00:00:00.000Z</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>FLAT FIRE</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>99031</td>\n",
+       "      <td>Jefferson (County)</td>\n",
+       "      <td>25117</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025082301</td>\n",
+       "      <td>10</td>\n",
+       "      <td>R</td>\n",
+       "      <td>2025-08-25T18:21:58.453Z</td>\n",
+       "      <td>8b07b29243bdbba511790332bd3fa9cca0fe33fd</td>\n",
+       "      <td>f0604c05-113b-449e-8e4a-f3b5076af546</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>FM-5609-HI</td>\n",
+       "      <td>5609</td>\n",
+       "      <td>HI</td>\n",
+       "      <td>FM</td>\n",
+       "      <td>2025-08-19T00:00:00.000Z</td>\n",
+       "      <td>2025</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>KUNIA ROAD FIRE</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>99003</td>\n",
+       "      <td>Honolulu (County)</td>\n",
+       "      <td>25114</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025082001</td>\n",
+       "      <td>9</td>\n",
+       "      <td>R</td>\n",
+       "      <td>2025-08-21T18:22:16.374Z</td>\n",
+       "      <td>731df26a647e5a0338177f445bab7a23b6f8d6ed</td>\n",
+       "      <td>ffab7fa0-2e69-428d-b4d3-da95ca352c03</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 28 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  femaDeclarationString  disasterNumber state declarationType  \\\n",
+       "0            FM-5612-CA            5612    CA              FM   \n",
+       "1            FM-5611-MT            5611    MT              FM   \n",
+       "2            FM-5610-OR            5610    OR              FM   \n",
+       "3            FM-5610-OR            5610    OR              FM   \n",
+       "4            FM-5609-HI            5609    HI              FM   \n",
+       "\n",
+       "            declarationDate  fyDeclared incidentType declarationTitle  \\\n",
+       "0  2025-09-03T00:00:00.000Z        2025         Fire         2-7 FIRE   \n",
+       "1  2025-08-26T00:00:00.000Z        2025         Fire  WINDY ROCK FIRE   \n",
+       "2  2025-08-23T00:00:00.000Z        2025         Fire       FLAT FIRE    \n",
+       "3  2025-08-23T00:00:00.000Z        2025         Fire       FLAT FIRE    \n",
+       "4  2025-08-19T00:00:00.000Z        2025         Fire  KUNIA ROAD FIRE   \n",
+       "\n",
+       "   ihProgramDeclared  iaProgramDeclared  ...  placeCode      designatedArea  \\\n",
+       "0              False              False  ...      99009  Calaveras (County)   \n",
+       "1              False              False  ...      99077     Powell (County)   \n",
+       "2              False              False  ...      99017  Deschutes (County)   \n",
+       "3              False              False  ...      99031  Jefferson (County)   \n",
+       "4              False              False  ...      99003   Honolulu (County)   \n",
+       "\n",
+       "  declarationRequestNumber lastIAFilingDate  incidentId  region  \\\n",
+       "0                    25121             None  2025090301       9   \n",
+       "1                    25119             None  2025082701       8   \n",
+       "2                    25117             None  2025082301      10   \n",
+       "3                    25117             None  2025082301      10   \n",
+       "4                    25114             None  2025082001       9   \n",
+       "\n",
+       "  designatedIncidentTypes               lastRefresh  \\\n",
+       "0                       R  2025-09-03T18:41:07.857Z   \n",
+       "1                       R  2025-08-28T18:01:23.160Z   \n",
+       "2                       R  2025-08-25T18:21:58.453Z   \n",
+       "3                       R  2025-08-25T18:21:58.453Z   \n",
+       "4                       R  2025-08-21T18:22:16.374Z   \n",
+       "\n",
+       "                                       hash  \\\n",
+       "0  d017531813b75fc753371c26b246931d48de651e   \n",
+       "1  29e175a73b969da6864182e703e3cb3f8d0bb32d   \n",
+       "2  c4a190d030807595da90813aabc6ad2175917668   \n",
+       "3  8b07b29243bdbba511790332bd3fa9cca0fe33fd   \n",
+       "4  731df26a647e5a0338177f445bab7a23b6f8d6ed   \n",
+       "\n",
+       "                                     id  \n",
+       "0  28a1ba9f-d914-4024-9e75-4a66b5bba092  \n",
+       "1  41329e57-2046-4196-a63d-902f3e7c923c  \n",
+       "2  df7cb24f-8e5a-4c1e-923e-4c75c9ec4581  \n",
+       "3  f0604c05-113b-449e-8e4a-f3b5076af546  \n",
+       "4  ffab7fa0-2e69-428d-b4d3-da95ca352c03  \n",
+       "\n",
+       "[5 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Within the API URL, filter the records to return only fyDeclared to 2013 or newer.\n",
     "# US Census GDBs only go back to 2013; before that it's shapefiles only\n",
@@ -253,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7c9999ec",
    "metadata": {},
    "outputs": [],
@@ -274,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e31bd54e",
    "metadata": {},
    "outputs": [
@@ -324,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "6f76cf65",
    "metadata": {},
    "outputs": [],
@@ -345,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8262e79c",
    "metadata": {},
    "outputs": [],
@@ -397,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ba40e248",
    "metadata": {},
    "outputs": [
@@ -407,7 +635,7 @@
        "0.0"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +653,102 @@
    "id": "b838fb85",
    "metadata": {},
    "source": [
-    "Well that's encouraging (no really I'm not even being sarcastic). I get a whole column of big fat zeros for the declaredDate ranges of all the fema Dec Strings. Honestly...that means I should be fine just proceeding with my simple it's-there-or-not check. I should probably also commit."
+    "Well that's encouraging (no really I'm not even being sarcastic). I get a whole column of big fat zeros for the declaredDate ranges of all the fema Dec Strings. Honestly...that means I should be fine just proceeding with my simple it's-there-or-not check. I should probably also commit.\n",
+    "\n",
+    "OK getting near end-of-day. But now I know I can go forward with a comparison so maybe I'll start that part..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f401c9b",
+   "metadata": {},
+   "source": [
+    "### Get unique femaDeclarationStrings from FEMA API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e302eff9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_fema_strings = summaries_df[\"femaDeclarationString\"].unique().tolist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c43da4a",
+   "metadata": {},
+   "source": [
+    "### Get unique femaDeclarationString vals from Dashboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f7e7655",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dashboard_sdf = dashboard_layer.query().sdf\n",
+    "\n",
+    "existing_fema_strings = dashboard_sdf[\"femaDeclarationString\"].unique().tolist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96f6ae68",
+   "metadata": {},
+   "source": [
+    "### Get only the fema strings we need to worry about"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0b64852c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adds_strings = [s for s in new_fema_strings if not s in existing_fema_strings]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d530614b",
+   "metadata": {},
+   "source": [
+    "### Create a new dataframe with only the fema strings we want"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9e5ef5d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adds_df = summaries_df[summaries_df[\"femaDeclarationString\"].isin(keep_fema_strings)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9de8a6d0",
+   "metadata": {},
+   "source": [
+    "Check back tomorrow for another exciting episode! Hopefully we can grab & dissolve the geometries for the keep-rows from our fema dataframe."
    ]
   }
  ],
